* Html.Add[Script|CssFile]Parts() now can handle already bundled resources correctly (no attempt is made to bundle them, the bundle's virtual url is returned instead) * Made extra bundles for frequently used resources (like sequence js, fileupload, image gallery etc.). This way they always come compressed.

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
@@ -9,14 +9,10 @@
     var clientId = "picture" + random;
     var pictureService = EngineContext.Current.Resolve<SmartStore.Services.Media.IPictureService>();
     int pictureId = Model.HasValue ? Model.Value : 0; // codehint: sm-add
-    var picture = pictureService.GetPictureById(pictureId); // codehint: sm-edit
+	var picture = pictureService.GetPictureById(pictureId); // codehint: sm-edit
 
-    Html.AddCssFileParts("~/Content/fileupload/jquery.fileupload-single-ui.css");
-    Html.AddScriptParts(
-		"~/Scripts/jquery-ui/widget.js",
-        "~/Content/fileupload/jquery.iframe-transport.js",
-        "~/Content/fileupload/jquery.fileupload.js",
-        "~/Content/fileupload/jquery.fileupload-single-ui.js");
+	Html.AddScriptParts("~/bundles/fileupload");
+	Html.AddCssFileParts("~/css/fileupload");
 }
 
 <div id="@clientId" class="fileupload" style="display: inline-block;">
