--- a/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Home/ContentSlider.cshtml
@@ -22,11 +22,8 @@
 
     if (isActive) 
     {
-        Html.AddCssFileParts(false, Html.ThemePath("Content/slider.less"));
-        Html.AddScriptParts(
-            "~/Scripts/jquery.backgroundpos.js",
-            "~/Scripts/jquery.sequence.js",
-            "~/Scripts/jquery.sequence.custom.js");
+		Html.AddCssFileParts(false, Html.ThemePath("Content/slider.less"));
+		Html.AddScriptParts("~/bundles/sequencejs");
     }
 }
 
