--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Download.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Download.cshtml
@@ -8,14 +8,10 @@
     var randomNumber = CommonHelper.GenerateRandomInteger();
     var clientId = "download" + randomNumber;
     var downloadService = EngineContext.Current.Resolve<SmartStore.Services.Media.IDownloadService>();
-    var download = downloadService.GetDownloadById(Model);
-    
-    Html.AddCssFileParts("~/Content/fileupload/jquery.fileupload-single-ui.css");
-    Html.AddScriptParts(
-		"~/Scripts/jquery-ui/widget.js",
-        "~/Content/fileupload/jquery.iframe-transport.js",
-        "~/Content/fileupload/jquery.fileupload.js",
-        "~/Content/fileupload/jquery.fileupload-single-ui.js");
+	var download = downloadService.GetDownloadById(Model);
+
+	Html.AddScriptParts("~/bundles/fileupload");
+	Html.AddCssFileParts("~/css/fileupload");
 }
 
 <script type="text/javascript">
