--- a/src/Presentation/SmartStore.Web/Administration/Views/Language/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Language/List.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="section-header">
     <div class="title">
-        <i class="fa fa-flag-o"></i>
+        <i class="fa fa-language"></i>
         @T("Admin.Configuration.Languages")
     </div>
     <div class="options">
