--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
@@ -89,13 +89,13 @@
                             .ReadOnly()
 							.Template(x => @Html.LabeledProductName(x.Id, x.Name, x.ProductTypeName, x.ProductTypeLabelHint))
 							.ClientTemplate(@Html.LabeledProductName("Id", "Name"));
-                        columns.Bound(p => p.Sku);
-                        columns.Bound(p => p.Price);
-                        columns.Bound(p => p.OldPrice);
+						columns.Bound(p => p.Sku).Width(150);
+						columns.Bound(p => p.Price).Width(120);
+						columns.Bound(p => p.OldPrice).Width(120);
                         columns.Bound(p => p.ManageInventoryMethod)
-                            .ReadOnly();
-                        columns.Bound(p => p.StockQuantity);
-                        columns.Bound(p => p.Published)
+							.ReadOnly();
+						columns.Bound(p => p.StockQuantity).Width(80);
+						columns.Bound(p => p.Published).Width(80)
                             .Width(100)
                             .Template(item => @Html.SymbolForBool(item.Published))
                             .ClientTemplate(@Html.SymbolForBool("Published"))
