--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -253,7 +253,7 @@ input[type="search"],
 input[type="tel"],
 input[type="color"],
 .uneditable-input {
-	.box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 1px 0 rgba(255,255,255, .3)");
+	.box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
 
 	// Hover state
 	&:hover {
@@ -267,7 +267,11 @@ input[type="color"],
 		outline: 0;
 		outline: thin dotted \9; /* IE6-9 */
 	}	
+}
 
+.input-append .add-on .fa, 
+.input-prepend .add-on .fa {
+	font-size: 16px;
 }
 
 // FORMS (CHECKBOX / RADIO)
