--- a/src/Presentation/SmartStore.Web/Content/smartstore.smartgallery.css
+++ b/src/Presentation/SmartStore.Web/Content/smartstore.smartgallery.css
@@ -16,6 +16,8 @@
 	overflow: hidden;
 	outline: 1px solid transparent;
     text-align: center;
+	/*background-color: #fff;
+	border: 1px solid #d5d5d5;*/
 }
 
 .sg-image-wrapper > img {
@@ -97,12 +99,14 @@
 	border: 0;
 	outline: 0;
     float: left;
-    padding: 0 2px;
+    padding: 0;
+	margin-left: -1px;
 }
 
 .sg-thumb-list li a {
 	display: block;
     border: 1px solid #d5d5d5;
+	background-color: #fff;
 	outline: none;
     text-align: center;
     opacity: .7;
